[gd_scene load_steps=23 format=2]

[ext_resource path="res://Units/Friendly/warrior_1/Warrior-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Units/Friendly/warrior_1/warrior_1.gd" type="Script" id=2]
[ext_resource path="res://UI/HealthBar/health_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/magic-tokens-12-game-fx-sound-effect-74023438.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 4.68351
height = 3.88545

[sub_resource type="CircleShape2D" id=16]
radius = 34.2247

[sub_resource type="Animation" id=18]
resource_name = "Damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.631373, 0.572549, 0.964706, 1 ), Color( 1, 0.309804, 0.152941, 0.270588 ), Color( 0.631373, 0.572549, 0.964706, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Raise"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.3 ), Vector2( 1, 1 ) ]
}

[node name="Warrior_1" type="KinematicBody2D" groups=[
"Friendly",
"Undead",
]]
modulate = Color( 0.631373, 0.572549, 0.964706, 1 )
input_pickable = true
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
base_speed = 65.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=[
"Friendly",
]]
position = Vector2( 0, -7 )
frames = SubResource( 14 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"Friendly",
]]
position = Vector2( 0.162548, -6.66768 )
shape = SubResource( 15 )

[node name="HealthBar" parent="." groups=[
"Friendly",
] instance=ExtResource( 3 )]
visible = false
margin_top = -22.9434
margin_bottom = -6.9434

[node name="Aggro" type="Area2D" parent="." groups=[
"Friendly",
]]
visible = false
collision_layer = 3
collision_mask = 2

[node name="AggroCollider" type="CollisionShape2D" parent="Aggro" groups=[
"Friendly",
]]
position = Vector2( 0, -7 )
shape = SubResource( 16 )

[node name="AggroTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="PathingTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damaged = SubResource( 18 )
anims/Raise = SubResource( 17 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="body_entered" from="Aggro" to="." method="_on_Aggro_body_entered"]
[connection signal="body_exited" from="Aggro" to="." method="_on_Aggro_body_exited"]
[connection signal="timeout" from="AggroTimer" to="." method="_on_AggroTimer_timeout"]
[connection signal="timeout" from="PathingTimer" to="." method="_on_PathingTimer_timeout"]
